# QRCodeCapture-cmd

./: Cargo.toml
src/: main.rs
