[package]
name = "qr_code_capture"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
num-traits = "0.2"
num-derive = "0.4"
rxing = "0.7.1"
reqwest = { version = "0.12", features = ["json", "native-tls-vendored"] }
serde_json = "1.0"
humantime = "2.1.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
